--- a/results/电偶极子电势与电场的计算与可视化实验报告.md
+++ b/results/电偶极子电势与电场的计算与可视化实验报告.md
@@ -2,9 +2,9 @@
 
 ## 一、基本信息
 
-- 小组名称：
-- 成员：
-- 实验日期：
+- 小组名称：009/第九组
+- 成员：杨万超，肖婷丹，余维，王雪涵
+- 实验日期：2025.04.09
 
 
 ---
@@ -35,6 +35,7 @@
 
 - 电势分布特点
 - 电场线方向特点与理论分析比较
+![image](https://github.com/user-attachments/assets/55762e36-5366-45cc-8cc0-722b49b0ecf1)
 
 ---
 
