--- a/results/电偶极子电势与电场的计算与可视化实验报告.md
+++ b/results/电偶极子电势与电场的计算与可视化实验报告.md
@@ -20,13 +20,23 @@
 ## 三、实验原理
 
 简要介绍电势、电场定义及其关系，并说明本实验计算方法。
+电势定义：点电荷产生的电势为 V=kq/r ，其中 k为库仑常数，q为电荷量，r为观测点到电荷的距离。
+电场定义：电场强度E是电势的负梯度：E=−∇V。
+电偶极子特性：由一对等量异号电荷组成，电势分布为各点电荷电势的叠加，电场方向由正电荷指向负电荷。
+电势计算：基于叠加原理，计算每个网格点到正负电荷的距离，分别代入电势公式后相加。
+电场计算：利用 np.gradient 计算电势梯度，取负值得到电场分量。
 
 ---
 
 ## 四、实验步骤与方法
-
 具体说明你如何实现电势和电场的计算，描述关键函数的实现原理。
 
+- 关键函数实现
+电势计算函数 calculate_potential
+电场计算函数 calculate_electric_field
+- 可视化方法
+电势图：使用 plt.contourf 绘制等势线，颜色映射表示电势高低。
+电场线：使用 plt.streamplot 绘制电场线，密度参数控制线间距。
 ---
 
 ## 五、实验结果与分析
@@ -34,7 +44,9 @@
 在此插入你绘制的电势图和电场线图，并对结果进行物理分析。
 
 - 电势分布特点
-- 电场线方向特点与理论分析比较
+正电荷附近电势最高（红色区域），负电荷附近电势最低（蓝色区域）。电势在电荷连线中垂线附近趋近于零，符合理论预测。
+- 电场线方向特点与理论分析
+比较电场线从正电荷发出，终止于负电荷，方向与电势下降最快方向一致。在中垂线附近电场线呈对称分布，远离偶极子时场强减弱。
 ![image](https://github.com/user-attachments/assets/55762e36-5366-45cc-8cc0-722b49b0ecf1)
 
 ---
@@ -42,11 +54,21 @@
 ## 六、讨论与总结
 
 - 实验中遇到的问题及解决方案？
+数值不稳定：电荷附近因 r→0 导致电势计算溢出。
+解决方案：在实际实验中可添加极小值 ϵ 避免除以零。
 - 本实验帮助你理解了哪些物理概念？
+叠加原理在电势计算中的直接应用。
+电场与电势梯度的矢量关系，梯度方向为电势上升最快方向。
 - 如何进一步扩展此实验？
+动态可视化：模拟电荷移动时的场分布变化。
+三维场分布：使用 mayavi 库实现三维电场可视化。
 
 ---
 
 ## 七、参考文献
 
 - 物理学参考书籍或其他参考资源
+- 赵凯华, 陈熙谋. 《电磁学》第四版. 高等教育出版社.
+David J. Griffiths. 《电动力学导论》. 清华大学出版社.
+NumPy 官方文档: https://numpy.org/doc/
+Matplotlib 示例库: https://matplotlib.org/stable/gallery/index.html
