--- a/results/图像特征强调实验报告.md
+++ b/results/图像特征强调实验报告.md
@@ -7,17 +7,20 @@
 ## 实验步骤与结果
 ### 1. 数据准备
 - 加载应力纤维数据 `data/stressFibers.txt`
-[插入原始数据图像]
+[![图像特征强调1](https://github.com/user-attachments/assets/a46dd6d2-8b5e-445e-939f-f05151cc9826)
+]
  
 ### 2. 高斯滤波器构建与分析
 - 滤波器参数：σ_x=√5, σ_y=√45
-[插入高斯滤波器图像]
+[![图像特征强调2](https://github.com/user-attachments/assets/90e7ae00-16f6-4278-b8a0-a05596a3bb1b)
+]
 
 - 滤波器特性分析：
-  - 3D表面图特征：
-  - 各方向响应特性：
+  - 3D表面图特征：呈现椭圆形分布，垂直方向（Y轴）展宽更明显（因σ_y > σ_x）；中心峰值尖锐，边缘平滑衰减。
+  - 各方向响应特性：对垂直方向的细长物体响应更强（因Y方向方差更大）；水平方向因σ_x较小，抑制了非垂直特征。
 ### 3. 组合滤波器构建
-[插入组合滤波器图像]
+[![图像特征强调3](https://github.com/user-attachments/assets/599f5212-87cd-4ff2-b179-831101b9f430)
+]
 - 组合效果对比：
   - 高斯滤波器：强调垂直特性
   - 组合滤波器：强调边缘特征
@@ -26,21 +29,28 @@
 
 原始组合滤波器
 
-[插入原始组合滤波器卷积之后的图像]
+[![图像特征强调4](https://github.com/user-attachments/assets/1437762c-b198-4ab9-b279-daf42d22f5da)
+]
 
 旋转90度
 
-[插入旋转90度组合滤波器卷积之后的图像]
+[![图像特征强调5](https://github.com/user-attachments/assets/7feafa1e-9fa0-4241-88b6-91da184f35c4)
+]
 
 旋转-45度
 
-[插入旋转-45度组合滤波器卷积之后的图像]
+[![图像特征强调6](https://github.com/user-attachments/assets/306b659a-448e-4bd8-bb44-09b90751ab6c)
+]
 
 旋转45度
 
-[插入旋转45度组合滤波器卷积之后的图像]
+[![图像特征强调7](https://github.com/user-attachments/assets/4bc44dd8-36be-4cfc-b640-fdbea0645204)
+]
 
 ## 实验讨论
-1. 总结不同滤波器的特点
-2. 分析滤波器方向对特征提取的影响
-3. 探讨实际应用中的选择策略
+1. 总结不同滤波器的特点：高斯滤波器：平滑噪声的同时保留特定方向的低频特征；方向性由σ_x和σ_y的比值决定。高斯-拉普拉斯组合滤波器：通过拉普拉斯算子（二阶微分）突出边缘；方向性继承自高斯滤波器的参数。
+2. 分析滤波器方向对特征提取的影响：垂直/水平滤波器：适用于具有明确方向性的结构（如拉伸后的应力纤维）。斜向滤波器（±45°）：可捕捉复杂网状结构中的对角线特征。
+3. 探讨实际应用中的选择策略：
+   预处理：先用高斯滤波器抑制噪声。
+   方向分析：根据先验知识或数据特性选择滤波器方向。（例如：细胞受单向拉伸时，优先使用垂直/水平滤波器）
+   量化特征：对滤波后图像的强度分布进行统计，量化极化程度。
