--- a/results/电偶极子电势与电场的计算与可视化实验报告.md
+++ b/results/电偶极子电势与电场的计算与可视化实验报告.md
@@ -67,8 +67,7 @@
 
 ## 七、参考文献
 
-- 物理学参考书籍或其他参考资源
-- 赵凯华, 陈熙谋. 《电磁学》第四版. 高等教育出版社.
+- 物理学参考书籍或其他参考资源： 赵凯华, 陈熙谋. 《电磁学》第四版. 高等教育出版社.
 David J. Griffiths. 《电动力学导论》. 清华大学出版社.
 NumPy 官方文档: https://numpy.org/doc/
 Matplotlib 示例库: https://matplotlib.org/stable/gallery/index.html
