--- a/results/电偶极子电势与电场的计算与可视化实验报告.md
+++ b/results/电偶极子电势与电场的计算与可视化实验报告.md
@@ -18,13 +18,12 @@
 ---
 
 ## 三、实验原理
-
 简要介绍电势、电场定义及其关系，并说明本实验计算方法。
 - 电势定义：点电荷产生的电势为 V=kq/r ，其中 k为库仑常数，q为电荷量，r为观测点到电荷的距离。
-电场定义：电场强度E是电势的负梯度：E=−∇V。
-电偶极子特性：由一对等量异号电荷组成，电势分布为各点电荷电势的叠加，电场方向由正电荷指向负电荷。
-电势计算：基于叠加原理，计算每个网格点到正负电荷的距离，分别代入电势公式后相加。
-电场计算：利用 np.gradient 计算电势梯度，取负值得到电场分量。
+- 电场定义：电场强度E是电势的负梯度：E=−∇V。
+- 电偶极子特性：由一对等量异号电荷组成，电势分布为各点电荷电势的叠加，电场方向由正电荷指向负电荷。
+- 电势计算：基于叠加原理，计算每个网格点到正负电荷的距离，分别代入电势公式后相加。
+- 电场计算：利用 np.gradient 计算电势梯度，取负值得到电场分量。
 
 ---
 
