--- a/results/图像平均实验报告.md
+++ b/results/图像平均实验报告.md
@@ -22,11 +22,27 @@ large_result = sim.convolve(img, large_filter)
  ```
 
 ### 结果展示
-[插入处理前后的对比图]
+[![Cache_-2a3690952f741cdf](https://github.com/user-attachments/assets/fd1ea76b-d8d2-4737-89dc-e753ad19d0f1)
+]
 
 ## 实验结果分析
 1. 总结不同尺寸滤波器的特点
+   ![屏幕截图 2025-04-10 190932](https://github.com/user-attachments/assets/29420884-ef1b-4ba7-9ac3-6712994a4154)
+
 2. 分析滤波器尺寸对处理效果的影响
+  （1）空间域响应
+       小尺寸滤波器（如3×3）：高频细节保留：对局部像素的微小变化敏感，可保留边缘、纹理等高频信息。有限噪声抑制：仅削弱局部噪声，对大面积噪声效果有限。
+       大尺寸滤波器（如15×15）：低频主导：将像素值平均到更大区域，抑制高频噪声，但导致整体模糊。边缘扩散：大范围平均使边缘过渡区域扩大，锐利边缘被“稀释”。
+  （2）频率域视角
+       小滤波器对应宽通带，允许更多高频分量通过（保留细节）。
+       大滤波器对应窄通带，截断高频分量（抑制噪声但牺牲细节）。
 3. 探讨实际应用中的选择策略
+   （1）根据目标需求选择尺寸
+       细节保留优先（如医学影像、显微图像）：使用小尺寸滤波器（3×3或5×5），或结合边缘检测的非线性滤波（如双边滤波）。
+       噪声抑制优先（如低光照图像、卫星遥感图像）：使用大尺寸滤波器（如15×15），或结合多级滤波（先大后小）。
+   （2）权衡噪声类型与图像内容
+       高频噪声（盐椒噪声）：小尺寸滤波器足以抑制，避免过度模糊。
+       低频噪声（高斯噪声、伪影）：需大尺寸滤波器，或改用频域滤波（如傅里叶变换后截断低频）。
 
 ## 解释卷积的作用和影响
+![屏幕截图 2025-04-10 191752](https://github.com/user-attachments/assets/72390b0e-3873-4266-95d3-3d203d042817)
